--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>AutoServ · Iniciar Sesión</title>
+        <title>MechApp · Iniciar Sesión</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Inicia sesión para gestionar tus servicios automotrices." />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
