--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -1,65 +1,158 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>AutoServ · Recuperar contraseña</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="description"
-            content="Recupera el acceso a tu cuenta de AutoServ solicitando un enlace de restablecimiento de contraseña."
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="../Styles/auth.css" />
-    </head>
-    <body>
-        <main>
-            <section class="auth-card" aria-labelledby="recovery-title">
-                <div class="brand" aria-label="AutoServ">
-                    <div class="brand-icon" aria-hidden="true"></div>
-                    <span>Mechapp</span>
-                </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>MechApp · Recuperar contraseña</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Recupera el acceso a tu cuenta de AutoServ solicitando un enlace de restablecimiento de contraseña."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../Styles/auth.css" />
+  </head>
+  <body>
+    <main>
+      <section class="auth-card" aria-labelledby="recovery-title">
+        <div class="brand" aria-label="AutoServ">
+          <div class="brand-icon" aria-hidden="true"></div>
+          <span>Mechapp</span>
+        </div>
 
-                <header class="auth-header">
-                    <h1 id="recovery-title">Recupera tu acceso</h1>
-                    <p>
-                        Ingresa el correo asociado a tu cuenta y te enviaremos un enlace para crear una nueva
-                        contraseña.
-                    </p>
-                </header>
+        <header class="auth-header">
+          <h1 id="recovery-title">Recupera tu acceso</h1>
+          <p>
+            Ingresa el correo asociado a tu cuenta y te enviaremos un enlace para crear una nueva
+            contraseña.
+          </p>
+        </header>
 
-                <form id="recovery-form" data-form="recovery" novalidate>
-                    <div class="field">
-                        <label for="recovery-email">Correo electrónico</label>
-                        <input
-                            type="email"
-                            id="recovery-email"
-                            name="email"
-                            placeholder="nombre@correo.com"
-                            autocomplete="email"
-                            required
-                            aria-describedby="recovery-email-error"
-                        />
-                        <p class="error-message" id="recovery-email-error" aria-live="polite"></p>
-                    </div>
-                    <div class="actions">
-                        <button type="submit" class="button" disabled aria-disabled="true">Enviar instrucciones</button>
-                        <p class="hint">
-                            Al enviar la solicitud recibirás un correo con los pasos para restablecer tu contraseña.
-                        </p>
-                    </div>
-                </form>
+        <!-- AGREGO data-atributos para EmailJS -->
+        <form
+          id="recovery-form"
+          data-form="recovery"
+          novalidate
+          data-emailjs-service-id="service_yn5lpjl"
+          data-emailjs-template-id="template_4cnqp07"
+          data-emailjs-public-key="uZw4YfdppiljaIHqe"
+          data-app-name="MechApp"
+        >
+          <div class="field">
+            <label for="recovery-email">Correo electrónico</label>
+            <input
+              type="email"
+              id="recovery-email"
+              name="email"
+              placeholder="nombre@correo.com"
+              autocomplete="email"
+              required
+              aria-describedby="recovery-email-error"
+              pattern="^[^\s@]+@[^\s@]+\.[^\s@]{2,}$"
+            />
+            <p class="error-message" id="recovery-email-error" aria-live="polite"></p>
+          </div>
 
-                <div class="auxiliary">
-                    <a href="./login.html">Volver a iniciar sesión</a>
-                </div>
-            </section>
-        </main>
-        <script src="../src/auth-forms.js" defer></script>
-    </body>
+          <div class="actions">
+            <button type="submit" class="button" id="recovery-btn" disabled aria-disabled="true">
+              Enviar instrucciones
+            </button>
+            <p class="hint">
+              Al enviar la solicitud recibirás un correo con los pasos para restablecer tu contraseña.
+            </p>
+            <!-- feedback de estado -->
+            <small id="recovery-msg" aria-live="polite" hidden></small>
+          </div>
+        </form>
+
+        <div class="auxiliary">
+          <a href="./login.html">Volver a iniciar sesión</a>
+        </div>
+      </section>
+    </main>
+
+    <!-- SDK de EmailJS ANTES del script inline -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
+
+    <!-- Script inline: igual estilo que en perfil -->
+    <script defer>
+      document.addEventListener("DOMContentLoaded", () => {
+        const form = document.getElementById("recovery-form");
+        const emailInput = document.getElementById("recovery-email");
+        const errorEl = document.getElementById("recovery-email-error");
+        const btn = document.getElementById("recovery-btn");
+        const msg = document.getElementById("recovery-msg");
+
+        if (!form || !emailInput || !btn) return;
+
+        // Habilitar/deshabilitar botón según validez
+        const toggleBtn = () => {
+          const valid = emailInput.checkValidity();
+          btn.disabled = !valid;
+          btn.setAttribute("aria-disabled", String(!valid));
+          errorEl.textContent = valid ? "" : "Ingresa un correo válido.";
+        };
+        emailInput.addEventListener("input", toggleBtn);
+        toggleBtn();
+
+        // Credenciales desde data-atributos
+        const serviceId  = form.dataset.emailjsServiceId;
+        const templateId = form.dataset.emailjsTemplateId;
+        const publicKey  = form.dataset.emailjsPublicKey;
+        const appName    = form.dataset.appName || "MechApp";
+
+        if (!window.emailjs) {
+          console.error("EmailJS no disponible.");
+          return;
+        }
+        if (!serviceId || !templateId || !publicKey) {
+          console.warn("Faltan credenciales de EmailJS en los data-atributos del formulario.");
+          return;
+        }
+
+        emailjs.init({ publicKey });
+
+        const setMsg = (text, type = "success") => {
+          msg.hidden = false;
+          msg.textContent = text;
+          msg.classList.remove("error", "success");
+          msg.classList.add(type);
+        };
+
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
+          if (!emailInput.checkValidity()) { emailInput.reportValidity(); return; }
+
+          btn.disabled = true;
+          setMsg("Enviando instrucciones…", "success");
+
+          try {
+            // Si en tu template usas un enlace con token real, cámbialo por el que te entregue tu backend.
+            const resetUrl = window.location.origin + "/resetear-contrasena.html";
+
+            // IMPORTANTE: en tu template EmailJS, To Email debe ser {{reset_email}}
+            await emailjs.send(serviceId, templateId, {
+              reset_email: emailInput.value,
+              reset_url: resetUrl,
+              app_name: appName,
+            });
+
+            setMsg("¡Listo! Revisa tu bandeja de entrada.", "success");
+            form.reset();
+            toggleBtn();
+          } catch (err) {
+            console.error(err);
+            setMsg("No se pudo enviar. Intenta nuevamente más tarde.", "error");
+          } finally {
+            btn.disabled = false;
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
