Add profile update pages and API endpoints

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -43,6 +43,11 @@
                             <dd data-profile-member-since></dd>
                         </div>
                     </dl>
+                    <div class="profile-actions" aria-label="Acciones de la cuenta">
+                        <a class="button" href="./editar-nombre.html">Cambiar nombre</a>
+                        <a class="button" href="./editar-correo.html">Cambiar correo</a>
+                        <a class="button" href="./cambiar-contrasena.html">Cambiar contraseña</a>
+                    </div>
                 </div>
             </div>
 
