--- a/pages/login.html
+++ b/pages/login.html
@@ -46,15 +46,27 @@
                     </div>
                     <div class="field">
                         <label for="password">Contraseña</label>
-                        <input
-                            type="password"
-                            id="password"
-                            name="password"
-                            placeholder="Ingresa tu contraseña"
-                            autocomplete="current-password"
-                            required
-                            aria-describedby="login-password-error"
-                        />
+                        <div class="password-input">
+                            <input
+                                type="password"
+                                id="password"
+                                name="password"
+                                placeholder="Ingresa tu contraseña"
+                                autocomplete="current-password"
+                                required
+                                aria-describedby="login-password-error"
+                                data-password-input
+                            />
+                            <button
+                                type="button"
+                                class="password-toggle-button"
+                                aria-label="Mostrar contraseña"
+                                aria-pressed="false"
+                                data-password-toggle
+                            >
+                                <span class="password-toggle-icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
                         <ul class="password-rules" aria-live="polite">
                             <li data-password-rule="length">Al menos 8 caracteres.</li>
                             <li data-password-rule="uppercase">Incluye una letra mayúscula.</li>
@@ -81,6 +93,7 @@
                 </div>
             </section>
         </main>
+        <script src="../src/password-visibility.js" defer></script>
         <script src="../src/auth-forms.js" defer></script>
     </body>
 </html>
