--- a/pages/registro.html
+++ b/pages/registro.html
@@ -56,15 +56,27 @@
                     </div>
                     <div class="field">
                         <label for="password">Contraseña</label>
-                        <input
-                            type="password"
-                            id="password"
-                            name="password"
-                            placeholder="Crea una contraseña"
-                            autocomplete="new-password"
-                            required
-                            aria-describedby="register-password-error"
-                        />
+                        <div class="password-input">
+                            <input
+                                type="password"
+                                id="password"
+                                name="password"
+                                placeholder="Crea una contraseña"
+                                autocomplete="new-password"
+                                required
+                                aria-describedby="register-password-error"
+                                data-password-input
+                            />
+                            <button
+                                type="button"
+                                class="password-toggle-button"
+                                aria-label="Mostrar contraseña"
+                                aria-pressed="false"
+                                data-password-toggle
+                            >
+                                <span class="password-toggle-icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
                         <ul class="password-rules" aria-live="polite">
                             <li data-password-rule="length">Al menos 8 caracteres.</li>
                             <li data-password-rule="uppercase">Incluye una letra mayúscula.</li>
@@ -75,15 +87,27 @@
                     </div>
                     <div class="field">
                         <label for="confirm-password">Confirmar contraseña</label>
-                        <input
-                            type="password"
-                            id="confirm-password"
-                            name="confirm-password"
-                            placeholder="Repite tu contraseña"
-                            autocomplete="new-password"
-                            required
-                            aria-describedby="register-confirm-password-error"
-                        />
+                        <div class="password-input">
+                            <input
+                                type="password"
+                                id="confirm-password"
+                                name="confirm-password"
+                                placeholder="Repite tu contraseña"
+                                autocomplete="new-password"
+                                required
+                                aria-describedby="register-confirm-password-error"
+                                data-password-input
+                            />
+                            <button
+                                type="button"
+                                class="password-toggle-button"
+                                aria-label="Mostrar contraseña"
+                                aria-pressed="false"
+                                data-password-toggle
+                            >
+                                <span class="password-toggle-icon" aria-hidden="true"></span>
+                            </button>
+                        </div>
                         <p class="error-message" id="register-confirm-password-error" aria-live="polite"></p>
                     </div>
                     <div class="field">
@@ -120,6 +144,7 @@
             </section>
         </main>
 
+        <script src="../src/password-visibility.js" defer></script>
         <script src="../src/auth-forms.js" defer></script>
     </body>
 </html>
