feat: require admin approval for mechanic accounts

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -114,6 +114,7 @@
         <td data-user-date></td>
         <td class="col-actions">
           <div class="actions">
+            <button class="ghost-button" type="button" data-action="view-certificate" hidden>Ver certificado</button>
             <button class="ghost-button" type="button" data-action="update-certificate">Actualizar certificado</button>
             <button class="ghost-button" type="button" data-action="update-account">Actualizar rol</button>
           </div>
